# databricks_clone

./: README.md  pyproject.toml  test.ipynb
.devcontainer/: devcontainer.json  docker-compose.yaml
src/local_spark/: app.py  docker-compose.yaml  hello.py
