[tool.poetry]
name = "databricks_clone"
version = "0.1.0"
description = ""
authors = ["Péter Sinkovicz"]
readme = "README.md"
packages = [{include = "main", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^6.0.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
idna = "3.10"
pyspark = "^3.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
main_spark = 'local_spark.hello:main'